feat: add floating research navigator
